--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <input type="submit" value="Calcular IMC">
         </form>
         <footer>
-            <p>&copy; 2024 Yan Graim. Todos os direitos reservados.</p>
+            <p>&copy; 2024 <a href="https://github.com/YanGraim"
+                    target="_blank">Yan Graim.</a>
+                Todos os direitos reservados.</p>
         </footer>
         <script src="script.js"></script>
     </body>
