adiciona div resultado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             </div>
             <input type="submit" value="Calcular IMC">
         </form>
+
+        <div class="resultado"></div>
+
         <footer>
             <p>&copy; 2024 <a href="https://github.com/YanGraim"
                     target="_blank">Yan Graim.</a>
