--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="submit" value="Calcular IMC">
         </form>
 
-        <div class="resultado"></div>
+        <div id="resultado"></div>
 
         <footer>
             <p>&copy; 2024 <a href="https://github.com/YanGraim"
